--- a/Languages/ChineseTraditional (繁體中文)/DefInjected/ThingDef/Modules_ArmsLeft.xml
+++ b/Languages/ChineseTraditional (繁體中文)/DefInjected/ThingDef/Modules_ArmsLeft.xml
@@ -13,7 +13,7 @@
   
   <!-- EN: pulse shield -->
   <DMS_Apparel_PulseShield.label>能量盾</DMS_Apparel_PulseShield.label>
-  <!-- EN: A miniaturized shield module used on a small scale in the colonial fleet. Its fast charging speed allows it to completely absorb low-caliber projectiles bursts or intercept a fatal projectile. -->
+  <!-- EN: A miniaturized shield module used on a small scale in the colonial fleet. Its fast charging speed allows it to completely absorb low-caliber projectiles bursts or intercept fatal projectiles. -->
   <DMS_Apparel_PulseShield.description>在殖民艦隊中應用的小型化護盾模組，因為成本的考量而只有相當小規模的裝備，快速的充電速度使其能夠完全吸收低口徑的彈頭或攔截致命的彈頭。</DMS_Apparel_PulseShield.description>
   
   <!-- EN: solid shield -->
