--- a/Languages/ChineseTraditional (繁體中文)/DefInjected/ThingDef/Modules_ShoulderLeft.xml
+++ b/Languages/ChineseTraditional (繁體中文)/DefInjected/ThingDef/Modules_ShoulderLeft.xml
@@ -1,6 +1,11 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <LanguageData>
   
+  <!-- EN: armor Pad -->
+  <DMS_Apparel_ArmorPad.label>肩部裝甲</DMS_Apparel_ArmorPad.label>
+  <!-- EN: A heavy shoulder armor mounted on an exosuit frame. -->
+  <DMS_Apparel_ArmorPad.description>一具安裝在外骨骼框架肩膀上的護甲</DMS_Apparel_ArmorPad.description>
+  
   <!-- EN: Demolish Missile Pod -->
   <DMS_Apparel_MissilePod.label>拆除者導彈艙</DMS_Apparel_MissilePod.label>
   <!-- EN: A missile pod module that attach on variety of weapon platforms, Capable of loading and firing four infrared guided missiles for anti-fortification use. -->
@@ -34,6 +39,17 @@
   <!-- EN: launch smoke shell -->
   <DMS_Apparel_SmokeLauncher.verbs.launch_smoke_shell.label>發射煙霧彈</DMS_Apparel_SmokeLauncher.verbs.launch_smoke_shell.label>
   
+  <!-- EN: Stugna launcher -->
+  <DMS_Apparel_StugnaLauncher.label>短號發射器</DMS_Apparel_StugnaLauncher.label>
+  <!-- EN: A Dragoon shoulder launcher that holds two stugna missiles. It is effective against heavy mechs and even tanks. However, a long aiming time and a clear line of sight are required to lock on target. -->
+  <DMS_Apparel_StugnaLauncher.description>一種安裝在龍騎兵肩部的反坦克導彈發射裝置，可攜帶兩枚短號導彈。對付重型機甲甚至坦克都很有效。然而需要較長的瞄準時間和清晰的視線才能鎖定目標。</DMS_Apparel_StugnaLauncher.description>
+  <!-- EN: stugna missile -->
+  <DMS_Apparel_StugnaLauncher.comps.CompApparelReloadable.chargeNoun>短號導彈</DMS_Apparel_StugnaLauncher.comps.CompApparelReloadable.chargeNoun>
+  <!-- EN: on cooldown -->
+  <DMS_Apparel_StugnaLauncher.comps.CompApparelReloadable.cooldownGerund>冷卻中</DMS_Apparel_StugnaLauncher.comps.CompApparelReloadable.cooldownGerund>
+  <!-- EN: launch stugna missile -->
+  <DMS_Apparel_StugnaLauncher.verbs.launch_stugna_missile.label>發射短號導彈</DMS_Apparel_StugnaLauncher.verbs.launch_stugna_missile.label>
+  
   <!-- EN: Swarm rocket Pod -->
   <DMS_Apparel_SwarmMissilePod.label>集群火箭艙</DMS_Apparel_SwarmMissilePod.label>
   <!-- EN: A Rocket pod module that contains multiple high-explosive rocket rounds, can use its high fire rate to cover an large area. -->
@@ -44,6 +60,14 @@
   <DMS_Apparel_SwarmMissilePod.comps.CompApparelReloadable.cooldownGerund>冷卻中</DMS_Apparel_SwarmMissilePod.comps.CompApparelReloadable.cooldownGerund>
   <!-- EN: launch rocket -->
   <DMS_Apparel_SwarmMissilePod.verbs.launch_rocket.label>發射火箭</DMS_Apparel_SwarmMissilePod.verbs.launch_rocket.label>
+  
+  <!-- EN: hellfire missile -->
+  <DMS_Bullet_HellFire.label>地獄火導彈</DMS_Bullet_HellFire.label>
+  
+  <!-- EN: armor Pad -->
+  <DMS_Module_ArmorPad.label>肩部裝甲模組</DMS_Module_ArmorPad.label>
+  <!-- EN: A heavy shoulder armor mounted on an exosuit frame. -->
+  <DMS_Module_ArmorPad.description>一具安裝在外骨骼框架肩膀上的護甲</DMS_Module_ArmorPad.description>
   
   <!-- EN: Missile Pod -->
   <DMS_Module_MissilePod.label>拆除者導彈艙模組</DMS_Module_MissilePod.label>
@@ -59,6 +83,11 @@
   <DMS_Module_SmokeLauncher.label>煙霧發射器模組</DMS_Module_SmokeLauncher.label>
   <!-- EN: A simple remote-controlled launcher capable of loading smoke shells and providing accurate cover. -->
   <DMS_Module_SmokeLauncher.description>一種簡單的遙控發射器，能夠裝載煙霧彈並提供精確的掩護。</DMS_Module_SmokeLauncher.description>
+  
+  <!-- EN: Stugna launcher -->
+  <DMS_Module_StugnaLauncher.label>短號發射器模組</DMS_Module_StugnaLauncher.label>
+  <!-- EN: A Dragoon shoulder launcher that holds two stugna missiles. It is effective against heavy mechs and even tanks. However, a long aiming time and a clear line of sight are required to lock on target. -->
+  <DMS_Module_StugnaLauncher.description>一種安裝在龍騎兵肩部的反坦克導彈發射裝置，可攜帶兩枚短號導彈。對付重型機甲甚至坦克都很有效。然而需要較長的瞄準時間和清晰的視線才能鎖定目標。</DMS_Module_StugnaLauncher.description>
   
   <!-- EN: Swarm rocket Pod -->
   <DMS_Module_SwarmMissilePod.label>集群火箭艙模組</DMS_Module_SwarmMissilePod.label>
