--- a/Languages/ChineseSimplified (简体中文)/DefInjected/ThingDef/Modules_ShoulderLeft.xml
+++ b/Languages/ChineseSimplified (简体中文)/DefInjected/ThingDef/Modules_ShoulderLeft.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <LanguageData>
   
+  <!-- EN: armor Pad -->
+  <DMS_Apparel_ArmorPad.label>肩部装甲</DMS_Apparel_ArmorPad.label>
+  <!-- EN: A heavy shoulder armor mounted on an exosuit frame. -->
+  <DMS_Apparel_ArmorPad.description>一具安装在外骨骼框架肩膀上的护甲</DMS_Apparel_ArmorPad.description>
+  
   <!-- EN: Demolish Missile Pod -->
   <DMS_Apparel_MissilePod.label>拆除者导弹舱</DMS_Apparel_MissilePod.label>
   <!-- EN: A missile pod module that attach on variety of weapon platforms, Capable of loading and firing four infrared guided missiles for anti-fortification use. -->
-  <DMS_Apparel_MissilePod.description>一种导弹吊舱模块，附加在各种武器平台上，能够装载和发射四枚红外制导导弹用於反防御工事。</DMS_Apparel_MissilePod.description>
+  <DMS_Apparel_MissilePod.description>一种导弹吊舱模块，附加在各种武器平台上，能够装载和发射四枚红外制导导弹用于反防御工事。</DMS_Apparel_MissilePod.description>
   <!-- EN: missile -->
   <DMS_Apparel_MissilePod.comps.CompApparelReloadable.chargeNoun>导弹</DMS_Apparel_MissilePod.comps.CompApparelReloadable.chargeNoun>
   <!-- EN: on cooldown -->
@@ -34,6 +39,17 @@
   <!-- EN: launch smoke shell -->
   <DMS_Apparel_SmokeLauncher.verbs.launch_smoke_shell.label>发射烟雾弹</DMS_Apparel_SmokeLauncher.verbs.launch_smoke_shell.label>
   
+  <!-- EN: Stugna launcher -->
+  <DMS_Apparel_StugnaLauncher.label>短号发射器</DMS_Apparel_StugnaLauncher.label>
+  <!-- EN: A Dragoon shoulder launcher that holds two stugna missiles. It is effective against heavy mechs and even tanks. However, a long aiming time and a clear line of sight are required to lock on target. -->
+  <DMS_Apparel_StugnaLauncher.description>一种安装在龙骑兵肩部的反坦克导弹发射装置，可携带两枚短号导弹。对付重型机甲甚至坦克都很有效。然而需要较长的瞄准时间和清晰的视线才能锁定目标。</DMS_Apparel_StugnaLauncher.description>
+  <!-- EN: stugna missile -->
+  <DMS_Apparel_StugnaLauncher.comps.CompApparelReloadable.chargeNoun>短号导弹</DMS_Apparel_StugnaLauncher.comps.CompApparelReloadable.chargeNoun>
+  <!-- EN: on cooldown -->
+  <DMS_Apparel_StugnaLauncher.comps.CompApparelReloadable.cooldownGerund>冷却中</DMS_Apparel_StugnaLauncher.comps.CompApparelReloadable.cooldownGerund>
+  <!-- EN: launch stugna missile -->
+  <DMS_Apparel_StugnaLauncher.verbs.launch_stugna_missile.label>发射短号导弹</DMS_Apparel_StugnaLauncher.verbs.launch_stugna_missile.label>
+  
   <!-- EN: Swarm rocket Pod -->
   <DMS_Apparel_SwarmMissilePod.label>集群火箭舱</DMS_Apparel_SwarmMissilePod.label>
   <!-- EN: A Rocket pod module that contains multiple high-explosive rocket rounds, can use its high fire rate to cover an large area. -->
@@ -45,10 +61,18 @@
   <!-- EN: launch rocket -->
   <DMS_Apparel_SwarmMissilePod.verbs.launch_rocket.label>发射火箭</DMS_Apparel_SwarmMissilePod.verbs.launch_rocket.label>
   
+  <!-- EN: hellfire missile -->
+  <DMS_Bullet_HellFire.label>地狱火导弹</DMS_Bullet_HellFire.label>
+  
+  <!-- EN: armor Pad -->
+  <DMS_Module_ArmorPad.label>肩部装甲模块</DMS_Module_ArmorPad.label>
+  <!-- EN: A heavy shoulder armor mounted on an exosuit frame. -->
+  <DMS_Module_ArmorPad.description>一具安装在外骨骼框架肩膀上的护甲</DMS_Module_ArmorPad.description>
+  
   <!-- EN: Missile Pod -->
   <DMS_Module_MissilePod.label>拆除者导弹舱模块</DMS_Module_MissilePod.label>
   <!-- EN: A missile pod module that attach on variety of weapon platforms, Capable of loading and firing four infrared guided missiles for anti-fortification use. -->
-  <DMS_Module_MissilePod.description>一种导弹吊舱模块，附加在各种武器平台上，能够装载和发射四枚红外制导导弹用於反防御工事。</DMS_Module_MissilePod.description>
+  <DMS_Module_MissilePod.description>一种导弹吊舱模块，附加在各种武器平台上，能够装载和发射四枚红外制导导弹用于反防御工事。</DMS_Module_MissilePod.description>
   
   <!-- EN: Missile Pod Plus -->
   <DMS_Module_MissilePodPlus.label>双倍型拆除者导弹舱模块</DMS_Module_MissilePodPlus.label>
@@ -59,6 +83,11 @@
   <DMS_Module_SmokeLauncher.label>烟雾发射器模块</DMS_Module_SmokeLauncher.label>
   <!-- EN: A simple remote-controlled launcher capable of loading smoke shells and providing accurate cover. -->
   <DMS_Module_SmokeLauncher.description>一种简单的遥控发射器，能够装载烟雾弹并提供精确的掩护。</DMS_Module_SmokeLauncher.description>
+  
+  <!-- EN: Stugna launcher -->
+  <DMS_Module_StugnaLauncher.label>短号发射器模块</DMS_Module_StugnaLauncher.label>
+  <!-- EN: A Dragoon shoulder launcher that holds two stugna missiles. It is effective against heavy mechs and even tanks. However, a long aiming time and a clear line of sight are required to lock on target. -->
+  <DMS_Module_StugnaLauncher.description>一种安装在龙骑兵肩部的反坦克导弹发射装置，可携带两枚短号导弹。对付重型机甲甚至坦克都很有效。然而需要较长的瞄准时间和清晰的视线才能锁定目标。</DMS_Module_StugnaLauncher.description>
   
   <!-- EN: Swarm rocket Pod -->
   <DMS_Module_SwarmMissilePod.label>集群火箭舱模块</DMS_Module_SwarmMissilePod.label>
