--- a/TODO
+++ b/TODO
@@ -1,14 +1,15 @@
 
+- 內容: 敵對的滿血龍騎
+- 內容: 使用原版貼圖改的重型(鈾砲)步槍與重型加農砲
+- 內容: APS模塊(左肩)
+- 內容: 彈射逃生模塊（背包）
+
+
 - 機制: 改裝面板可以改上色
 
-
-- 內容: 模塊分解回收
 - 內容: 用火控組件的射擊強化模塊（左肩）
-- 內容: 煙霧/EMP發射器模塊（左肩）
 - 內容: 短距跳躍用的直升機背包（背包）
-- 內容: 彈射逃生模塊（背包）
 - 內容: 伐木電鋸模塊（左手）
-- 內容: 給占用複數槽位的大型模塊單獨一個儲存分類
 
 
 
